; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_dirid.c_get_unknown_dirid.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_dirid.c_get_unknown_dirid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_unknown_dirid.unknown_dirid = internal global i8* null, align 8
@get_unknown_dirid.unknown_str = internal constant [9 x i8] c"\\unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_unknown_dirid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_unknown_dirid() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i8*, i8** @get_unknown_dirid.unknown_dirid, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %23, label %5

5:                                                ; preds = %0
  %6 = call i32 @GetSystemDirectoryW(i8* null, i32 0)
  %7 = call i32 @strlenW(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @get_unknown_dirid.unknown_str, i64 0, i64 0))
  %8 = add nsw i32 %6, %7
  store i32 %8, i32* %2, align 4
  %9 = call i32 (...) @GetProcessHeap()
  %10 = load i32, i32* %2, align 4
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 1
  %13 = trunc i64 %12 to i32
  %14 = call i8* @HeapAlloc(i32 %9, i32 0, i32 %13)
  store i8* %14, i8** @get_unknown_dirid.unknown_dirid, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %5
  store i8* null, i8** %1, align 8
  br label %25

17:                                               ; preds = %5
  %18 = load i8*, i8** @get_unknown_dirid.unknown_dirid, align 8
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @GetSystemDirectoryW(i8* %18, i32 %19)
  %21 = load i8*, i8** @get_unknown_dirid.unknown_dirid, align 8
  %22 = call i32 @strcatW(i8* %21, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @get_unknown_dirid.unknown_str, i64 0, i64 0))
  br label %23

23:                                               ; preds = %17, %0
  %24 = load i8*, i8** @get_unknown_dirid.unknown_dirid, align 8
  store i8* %24, i8** %1, align 8
  br label %25

25:                                               ; preds = %23, %16
  %26 = load i8*, i8** %1, align 8
  ret i8* %26
}

declare dso_local i32 @GetSystemDirectoryW(i8*, i32) #1

declare dso_local i32 @strlenW(i8*) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @strcatW(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
